force-app/main/default/objects/Event__c/fields/Maximum_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Attendees__c</fullName>
    <label>Maximum Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>