force-app/main/default/objects/Event__c/fields/Total_Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Attendees__c</fullName>
    <label>Total Number of Attendees</label>
    <summaryForeignKey>Registration__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>