force-app/main/default/objects/Event__c/recordTypes/Inperson.recordType-meta.xml
<RecordType>
    <fullName>Inperson</fullName>
    <active>true</active>
    <label>In person</label>
</RecordType>