force-app/main/default/objects/Event__c/recordTypes/Virtual_Event.recordType-meta.xml
<RecordType>
    <fullName>Virtual_Event</fullName>
    <active>false</active>
    <label>Virtual Event</label>
</RecordType>