force-app/main/default/objects/Event__c/validationRules/Event_date_should_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_date_should_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Event_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Event_Date__c</errorDisplayField>
    <errorMessage>Event date should be in future.</errorMessage>
</ValidationRule>