force-app/main/default/objects/Event__c/validationRules/No_of_attendees_not_exceed_maximum_no.validationRule-meta.xml
<ValidationRule>
    <fullName>No_of_attendees_not_exceed_maximum_no</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Number_of_Attendees__c &gt;  Maximum_Attendees__c</errorConditionFormula>
    <errorDisplayField>Maximum_Attendees__c</errorDisplayField>
    <errorMessage>Total no. of attendees can not exceed from maximum no. of attendees.</errorMessage>
</ValidationRule>