force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Maximum_Attendees__c</columns>
    <columns>Available_Seats__c</columns>
    <columns>Total_Number_of_Attendees__c</columns>
    <columns>Event_Status__c</columns>
    <columns>Event_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>